syntax = "proto3";

package calculator;

message CalculatorSumRequest {
    int32 a = 1;
    int32 b = 2;
}

message CalculatorSumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 result = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double result = 1;
}


service CalculatorService {
    rpc Calculator(CalculatorSumRequest) returns (CalculatorSumResponse) {}
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {}
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {}
}



